--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="item-3-description">
               This WebPage is made by HTML CSS & JS And Its my Recent Project
               This Project Is Based on an Eduction Cosultancy Website.To See the
-              full webpage Click on the Button Which is given Below
+              full webpage Click on the Button
             </div>
             <a class="view" href="">View</a>
           </div>
